Added xterm terminal in frontend and docker intialisation in backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,28 @@
-# Dockerfile for Backend Service
-
 # Use the official Ubuntu 24.04 image as the base
-FROM ubuntu:24.04
+FROM ubuntu:20.04
 
-# Setup user sandbox
+# Set environment variables to non-interactive for apt
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Create user 'sandbox'
 RUN useradd -m -s /bin/bash sandbox
 
-#Setup working directory
+# Set initial working directory
 WORKDIR /home/sandbox
 
-#Update and install necessary packages
-RUN apt-get update && apt-get install -y 
+# Update and install required packages in one layer
+RUN apt-get update && \
+    apt-get install -y curl nano gnupg && \
+    curl -fsSL https://deb.nodesource.com/setup_19.x | bash - && \
+    apt-get install -y nodejs && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# install nano and curl
-RUN apt-get install -y nano curl
+# Set up bash prompt for sandbox user
+RUN echo "PS1='\\w'" >> /home/sandbox/.bashrc
 
-# Install Node.js and npm
-RUN curl -fsSL https://deb.nodesource.com/setup_19.x | bash - && apt-get install -y nodejs 
+# Switch to sandbox user
+USER sandbox
 
-# Set up bash prompt
-RUN echo "PS1='\w'" >> /home/sandbox/.bashrc
-
-# setup final working directory
+# Final working directory
 WORKDIR /home/sandbox/app
