--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^6.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@tanstack/react-query": "^5.83.0",
+    "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "antd": "^5.26.6",
     "axios": "^1.11.0",
