Added terminal input output sockets in backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,16 +13,18 @@ WORKDIR /home/sandbox
 # Update and install required packages in one layer
 RUN apt-get update && \
     apt-get install -y curl nano gnupg && \
-    curl -fsSL https://deb.nodesource.com/setup_19.x | bash - && \
+    curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
     apt-get install -y nodejs && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 # Set up bash prompt for sandbox user
-RUN echo "PS1='\\w'" >> /home/sandbox/.bashrc
+RUN echo "export PS1='\[\e[32m\]● \[\e[1;34m\]\W\[\e[0m\]\$ '" >> /home/sandbox/.bashrc
 
 # Switch to sandbox user
 USER sandbox
 
 # Final working directory
 WORKDIR /home/sandbox/app
+
+
