--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.26.6",
     "axios": "^1.11.0",
     "chokidar": "^4.0.3",
+    "framer-motion": "^12.23.12",
     "monaco-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
